@@ -28,7 +28,12 @@
 #include "event.h"
 
 #define CONFIG_FILE "/etc/fapolicyd/fapolicyd.rules"
-#define AUDIT 8
+#ifdef FAN_AUDIT
+#define AUDIT FAN_AUDIT
+#else
+#define AUDIT 0x10
+#define FAN_ENABLE_AUDIT 0x00000040
+#endif
 typedef enum { NO_OPINION = 0, ALLOW = FAN_ALLOW, DENY = FAN_DENY, ALLOW_AUDIT = FAN_ALLOW | AUDIT, DENY_AUDIT = FAN_DENY | AUDIT} decision_t;
 
 extern int debug;
