@@ -1,4 +1,5 @@
 0.8.3
+- Add audit support for the linux-4.15 kernel
 
 0.8.2
 - Add seccomp filter support
